# HttpTunnel

./: CMakeLists.txt  README.md  settings.ini
example/: proxylist.json  proxylist.txt
include/: HttpTransceiver.hpp  IncomingHttpTrafficManagement.hpp  Logger.hpp  OutgoingHttpTrafficManagement.hpp  ProcessingService.hpp  SettingsLoader.hpp
sources/: HttpTransceiver.cpp  IncomingHttpTrafficManagement.cpp  Logger.cpp  OutgoingHttpTrafficManagement.cpp  ProcessingService.cpp  SettingsLoader.cpp  main.cpp
